--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <a href="#" class="logo">Mostafa</a>
+        <p>mostafa mohamed</p>
         <nav>
             <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
